src/tests/errors/staticanalysis/naming/procedure_name_used_fail.cmp
program procedure_name_used_fail
begin

    proc main()
    begin
        var Tmp : int ;

        proc Tmp() : string /* error, already a symbol named Tmp in current scope */
        begin
            return "Top of the world, ma!";
        end
    in 

        printstr( Tmp() );
    end;
end